# sultan_backend

./: .gitmodules  Cargo.toml  README.md  sonar-project.properties
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: pr.yml
migrations/: 20251123020602_branch.sql  20251123021242_user.sql  20251123022025_permission.sql  20251123024002_token.sql  20251128085318_category.sql  20251201123928_supplier.sql  20251203025713_customer.sql  20251206040811_product.sql  20251214112428_price.sql
sultan/: Cargo.toml
sultan/src/: config.rs  lib.rs  main.rs  server.rs
sultan/src/domain/dto/: category.rs  customer.rs  login.rs  mod.rs
sultan/src/web/: app_state.rs  auth_middleware.rs  auth_router.rs  category_router.rs  context_macro.rs  customer_router.rs  error.rs  middleware.rs  mod.rs
sultan/tests/: auth_test.rs  category_test.rs  config_test.rs  customer_test.rs
sultan/tests/common/: mock_auth_service.rs  mock_category_service.rs  mock_customer_service.rs  mod.rs
sultan_core/: Cargo.toml  LICENSE  README.md  sonar-project.properties
sultan_core/.github/: copilot-instructions.md
sultan_core/src/: lib.rs
sultan_core/src/application/: auth_service.rs  branch_service.rs  cache.rs  category_service.rs  customer_service.rs  mod.rs  product_service.rs  supplier_service.rs  user_service.rs
sultan_core/src/crypto/: jwt.rs  mod.rs  password.rs
sultan_core/src/domain/: context.rs  mod.rs
sultan_core/src/domain/error/: mod.rs
sultan_core/src/domain/model/: branch.rs  category.rs  customer.rs  mod.rs  pagination.rs  permission.rs  product.rs  sell_price.rs  supplier.rs  token.rs  update.rs  user.rs
sultan_core/src/snowflake/: mod.rs
sultan_core/src/storage/: branch_repo.rs  category_repo.rs  customer_repo.rs  mod.rs  product_repo.rs  sell_price_repo.rs  supplier_repo.rs  token_repo.rs  transaction.rs  unit.rs  user_repo.rs
sultan_core/src/storage/sqlite/: branch.rs  category.rs  customer.rs  mod.rs  product.rs  sell_price.rs  supplier.rs  token.rs  transaction.rs  unit.rs  user.rs
sultan_core/src/testing/storage/: branch.rs  category.rs  customer.rs  mod.rs  product.rs  sell_price.rs  supplier.rs  token.rs  unit.rs  user.rs
sultan_core/src/web/: error.rs
sultan_core/tests/: branch_repo.rs  category_repo.rs  customer_repo.rs  product_repo.rs  sell_price_repo.rs  supplier_repo.rs  token_repo.rs  transaction.rs  unit_repo.rs  user_repo.rs
sultan_core/tests/common/: branch_share.rs  category_share.rs  customer_share.rs  mod.rs  product_share.rs  supplier_share.rs  token_share.rs  unit_share.rs  user_share.rs
sultan_web/: Cargo.toml
sultan_web/src/: app_state.rs  lib.rs
sultan_web/src/dto/: customer.rs  login.rs  mod.rs  supplier.rs
sultan_web/src/handler/: auth_router.rs  category_router.rs  customer_router.rs  middleware.rs  mod.rs  supplier_routes.rs
sultan_web/tests/: app_state_test.rs  auth_test.rs  category_test.rs  customer_test.rs  middleware_test.rs  supplier_test.rs  user_test.rs
sultan_web/tests/common/: mock_auth_service.rs  mock_category_service.rs  mock_supplier_service.rs  mock_user_service.rs  mod.rs
