[package]
name = "sultan"
version = "0.1.0"
edition = "2024"

[dependencies]
sultan_core = { path = "../sultan_core" }
time = "0.3"
argon2 = "0.5.3"
tracing = "0.1"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "uuid", "chrono", "migrate"], default-features = false }
dotenvy = "0.15"
tower = "0.5"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
anyhow = "1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "std", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
validator = { version = "0.18", features = ["derive"] }
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

[dev-dependencies]
once_cell = "1.21"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
async-trait = "0.1"